--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'com.neev.poorna.TryProcessing'
+    mainClass = 'Processing'
 }
 
 tasks.named('test') {
